--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 # ????? ?????? ???????????????? ???? ?????? ? ??????? ????????? (????????????? ?? ?????? ????????? ??????????? ?? ????????? ?????? ??? ?????????? ??? ??????)
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.default-schema=netology_task
